--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="title_activity_movie_detail">MovieDetailActivity</string>
     <string name="title_activity_main2">MainActivity2</string>
     <string name="title_activity_animation_demo1">AnimationActivityDemo1</string>
+    <string name="title_activity_testactivity">testactivity</string>
 </resources>
